# ros2_ws

ejemplo_cpp/: CMakeLists.txt  package.xml  plugins.xml
ejemplo_cpp/include/ejemplo_cpp/: regular_polygon.hpp  visibility_control.h
ejemplo_cpp/src/: Fibonacci_action_client.cpp  Fibonacci_action_server.cpp  client_example.cpp  nodo_prueba.cpp  param_example.cpp  polygon_plugins.cpp  publisher_example.cpp  servicio_example.cpp  subscriber_example.cpp
msg_srv_action_pkg/: Apuntes.txt  CMakeLists.txt  package.xml
msg_srv_action_pkg/action/: Fibonacci.action
my_robot_controller/: package.xml  setup.py
my_robot_controller/my_robot_controller/: closed_loop.py  ejemplo_launch.py  fibonacci_action_client.py  fibonacci_action_server.py  first_node.py  parameters_node.py
